--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -28,8 +28,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
 
     - name: Run Tests
       run: |
-        python -m unittest discover -s tests -p 'test_*.py'
+        python -m unittest discover -s test -p 'test_*.py'
