--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -8,6 +8,11 @@ on:
     branches: 
       - main
 
+# don't cancel the running job when a new one is triggered
+concurrency: 
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,12 +25,9 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v3
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
 
     - name: Install Dependencies
+      timeout-minutes: 20
       run: |
         python -m pip install --upgrade pip
 
